Changes to be committed: 	modified:   .gitignore 	new file:   IDS.ipynb

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
+MachineLearningCVE
+TrafficLabelling
+zip_files
+
 # Byte-compiled / optimized / DLL files
+
+
 __pycache__/
 *.py[cod]
 *$py.class
