Changes to be committed: 	modified:   .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-MachineLearningCVE
-TrafficLabelling
-zip_files
+MachineLearningCVE/
+TrafficLabelling/
+zip_files/
 
 # Byte-compiled / optimized / DLL files
 
